Removed overflow auto because I want the user to actually scroll down the webpsite, not just scroll a box on a static page. Next need to fix top not same when content is shorter

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,7 @@ html {
 
 body {
     @apply text-darkTextPrimary bg-darkBackgroundPrimary;
+    min-height: 1000px;
 }
 
 a {
